Andre Pang <ozone@algorithm.com.au>.
----------------------------------------------------------------------
Thu Oct 11 05:32:57 2001                        Michael Jennings (mej)

Jerome De Greef <jdegreef@brutele.be> contributed a configure.ac file
for those who are using autoconf 2.50 or higher.
----------------------------------------------------------------------
Sun Oct 21 06:15:13 2001                        Michael Jennings (mej)

Fixed a couple remaining bugs in 0.9.1, including that really
annoying problem people keeping whining about where Eterm won't build
without Imlib2.  It will now. :P
----------------------------------------------------------------------
Thu Oct 25 02:01:27 2001                        Michael Jennings (mej)

Argh.  This configure.in/configure.ac thing is getting really old.
----------------------------------------------------------------------
Mon Dec  3 20:16:39 2001                        Michael Jennings (mej)

Patches from Paul Brannan <pbranna@clemson.edu>, Klaus Elsbernd
<elsbernd@dfki.uni-kl.de>, and Derrick Moser
<d2moser@calum.csclub.uwaterloo.ca> which appeared while I was away.
Fixes for mouse wheel reporting and reset handling (Paul), Solaris
portability (Klaus), and XIM (Derrick).

Getting ready to release 0.9.2 soonish.
----------------------------------------------------------------------
Tue Dec  4 16:38:15 2001                        Michael Jennings (mej)

Updated e-mail address for namsh at his request.
----------------------------------------------------------------------
Thu Dec 13 15:14:33 2001                        Michael Jennings (mej)

An update to a previous patch from Paul Brannan <pbranna@clemson.edu>.
----------------------------------------------------------------------
Fri Dec 14 15:17:14 2001                        Michael Jennings (mej)

termcap fix from Fredrik Svensson <fred@ludd.luth.se> and another
mod to Paul's patch.
----------------------------------------------------------------------